<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_3"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctor_page"
        android:textColor="@color/blue2"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:textSize="30sp"
        android:layout_marginBottom="30dp" />
    <Button
        android:id="@+id/btn_antrianlistdokter"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/antrian"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-black"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btn_antrianlistdokteruser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/list_antrian"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-black"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btn_changeprofile"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/change_profile"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-black"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-black"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"/>
</LinearLayout>