<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_3"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvNamaDokter"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/nama"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/tvcurrentantrian"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/antrian_sekarang"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/tvtotalantrian"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/total_antrian"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>