<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="697dp"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/edt_register_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/edt_register_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.942" />

        <EditText
            android:id="@+id/edt_register_firstname"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Birthday"
            app:layout_constraintEnd_toStartOf="@+id/edt_register_lastname"
            app:layout_constraintHorizontal_bias="0.677"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_register_password"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edt_register_lastname"
            android:layout_width="140dp"
            android:fontFamily="sans-serif-black"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Birthday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_register_password"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/Birthday"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="sans-serif-black"
            android:padding="15dp"
            android:textSize="20sp"
            android:hint="@string/birthday"
            app:layout_constraintBottom_toTopOf="@+id/edt_register_alamat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edt_register_alamat"
            android:layout_width="300dp"
            android:fontFamily="sans-serif-black"
            android:layout_height="wrap_content"
            android:layout_marginBottom="92dp"
            android:hint="@string/alamat"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edt_register_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="96dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Birthday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="sans-serif-black"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/Register"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="593dp"
            android:fontFamily="sans-serif-black"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>